--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <div class="about-text">
                     <p>Привет! Меня зовут Юлия Лавренова, и я учусь в 9-ом классе МБОУ "Отрадненская СОШ 2". Всю свою школьную жизнь я была круглой отличницей и стремлюсь к знаниям во всех сферах.</p>
                     <p>Помимо учебы в школе, я учусь в 7-ом классе МБУ ДШИ №5 на отделении народных инструментов, где осваиваю классическую гитару. Уже три года я состою в ансамбле гитаристов, что позволяет мне развивать не только музыкальные навыки, но и умение работать в команде.</p>
-                    <p>В настоящее время я активно готовлюсь к олимпиадам по литературе и английскому языку, а также работаю тестировщиком игр и СММ-специалистом проекта "ФразоЛаб". Кроме того, я разработала медиапроект "Первые для Первых", в рамках которого беру интервью у известных личностей Воронежской области.</p>
+                    <p>В настоящее время я активно готовлюсь к олимпиадам по литературе и английскому языку, а также работаю тестировщиком игр и СММ-специалистом проекта "ФразоЛаб". Кроме того, я разработала медиапроект "Первые для Первых", в рамках которого буду брать интервью у известных личностей Воронежской области.</p>
                 </div>
                 <div class="about-image">
                     <img src="photo_2025-10-31_16-39-32 (2).jpg" alt="Юлия Лавренова - круглая отличница">
@@ -356,12 +356,12 @@
                     <p>Финалист регионального конкурса "Лидер 21-го века" в номинации "Лидер медиацентра Движения Первых".</p>
                 </div>
                 <div class="achievement-item">
-                    <span class="achievement-year">Текущая деятельность</span>
+                    <span class="achievement-year">2024-2025</span>
                     <h3>Заместитель председателя</h3>
                     <p>Заместитель председателя местного Совета Первых Новоусманского района II созыва.</p>
                 </div>
                 <div class="achievement-item">
-                    <span class="achievement-year">Текущая деятельность</span>
+                    <span class="achievement-year">2024-2025</span>
                     <h3>Член регионального Совета</h3>
                     <p>Член регионального Совета Первых Воронежской области II созыва.</p>
                 </div>
@@ -371,7 +371,7 @@
                     <p>Лидер местного медиацентра Новоусманского района "Ритм Первых" (февраль - сентябрь 2025).</p>
                 </div>
                 <div class="achievement-item">
-                    <span class="achievement-year">2024-настоящее время</span>
+                    <span class="achievement-year">2024-2025</span>
                     <h3>Участник медиацентра</h3>
                     <p>Участник регионального медиацентра Воронежской области "ВКУС" (с ноября 2024).</p>
                 </div>
@@ -449,4 +449,5 @@
         });
     </script>
 </body>
+
 </html>
